--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 body {
 	width: 100vw;
-	min-width:770px;
-
+	min-width: 770px;
 	height: 100vh;
-		min-height: 720px;
-
+	min-height: 710px;
 	margin: 0;
 	padding: 0;
 	background: #646464;
@@ -20,11 +18,10 @@ body {
 .container {
 	width: 100%;
 	height: 100%;
-
 }
 
 .container > div {
-	height: 100%;
+	height: calc(100% - 30px);
 	float: left;
 	outline-offset: -5px;
 }
@@ -41,7 +38,7 @@ body {
 	outline: 1px solid #239023;
 	outline-offset: -5px;
 	background: -webkit-linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
-	        background: linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
+	background: linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
 	box-shadow: 0 2px 0 #239023;
 }
 
@@ -55,7 +52,7 @@ body {
 	height: 50px;
 	margin: 0 20px;
 	background: -webkit-linear-gradient(#ffad33 0%, #ff9900 30%, #ff9900 70%, #ffad33 100%);
-	        background: linear-gradient(#ffad33 0%, #ff9900 30%, #ff9900 70%, #ffad33 100%);
+	background: linear-gradient(#ffad33 0%, #ff9900 30%, #ff9900 70%, #ffad33 100%);
 	box-shadow: 0 4px 0 #b36b00;
 	outline: 1px solid #b36b00;
 	outline-offset: -5px;
@@ -70,7 +67,7 @@ body {
 	outline: 1px solid #239023;
 	outline-offset: -5px;
 	background: -webkit-linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
-	        background: linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
+	background: linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
 	box-shadow: 0 2px 0 #239023;
 	line-height: 30px;
 }
@@ -81,46 +78,91 @@ body {
 	box-shadow: 0 2px 0 #b36b00;
 }
 
-.connector {
+.upgrade {
 	width: calc(100% - 600px);
-	min-width:170px;
-	background: #704359;
-	outline: 1px dashed #bc8fa6;
+	min-width: 170px;
+	max-height: calc(100% - 350px) !important;
+	background: #594370;
+	outline: 1px dashed #a58fbc;
 }
 
-.adminpanel{
-	width:150px;
-	margin: 0 20px;
-}
-.k,
-.m{
-	width:75px;
-	float:left;
-}
-
-.admin,
-.buildings,
-.hack {
-	width:130px;
-	display:table;
+.upgrades,
+.up {
+	width: 130px;
+	display: table;
 	min-height: 40px;
 	margin: 20px;
-	background: -webkit-linear-gradient(#ff8080 0%, #ff4d4d 30%, #ff4d4d 70%, #ff8080 100%);
-	        background: linear-gradient(#ff8080 0%, #ff4d4d 30%, #ff4d4d 70%, #ff8080 100%);
-	box-shadow: 0 4px 0 #b30000;
-	outline: 1px solid #b30000;
+	background: -webkit-linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
+	background: linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
+	box-shadow: 0 4px 0 #6b00b3;
+	outline: 1px solid #6b00b3;
 	outline-offset: -5px;
 	line-height: 40px;
 	cursor: pointer;
 	cursor: hand;
 }
 
-.buildings{
-	margin:0 0 20px;
+.up {
+	width: 55px !important;
+	margin: 0 0 20px 20px;
+	float: left;
+}
+
+.upgrades:active,
+.up:active {
+	-webkit-transform: translate(0px, 2px);
+	        transform: translate(0px, 2px);
+	box-shadow: 0 2px 0 #6b00b3;
+}
+
+.upactive {
+	-webkit-transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
+	box-shadow: 0 2px 0 #6b00b3 !important;
+}
+
+.connector {
+	width: calc(100% - 600px);
+	min-width: 170px;
+	height: 320px !important;
+	background: #704359;
+	outline: 1px dashed #bc8fa6;
+}
+
+.adminpanel {
+	width: 150px;
+	margin: 0 20px;
+}
+
+.k,
+.m {
+	width: 75px;
+	float: left;
+}
+
+.admin,
+.buildings,
+.hack {
+	width: 130px;
+	display: table;
+	min-height: 40px;
+	margin: 20px;
+	background: -webkit-linear-gradient(#ff33ad 0%, #ff0099 30%, #ff0099 70%, #ff33ad 100%);
+	background: linear-gradient(#ff33ad 0%, #ff0099 30%, #ff0099 70%, #ff33ad 100%);
+	box-shadow: 0 4px 0 #b3006b;
+	outline: 1px solid #b3006b;
+	outline-offset: -5px;
+	line-height: 40px;
+	cursor: pointer;
+	cursor: hand;
+}
+
+.buildings {
+	margin: 0 0 20px;
 }
 
 .hack {
-	width:55px !important;
+	width: 55px !important;
 	margin: 0 0 20px;
 }
 
@@ -128,18 +170,18 @@ body {
 .hack:active {
 	-webkit-transform: translate(0px, 2px);
 	        transform: translate(0px, 2px);
-	box-shadow: 0 2px 0 #b30000;
+	box-shadow: 0 2px 0 #b3006b;
 }
 
-.buildingsactive{
+.buildingsactive {
 	-webkit-transform: translate(0px, 2px);
 	        transform: translate(0px, 2px);
-	box-shadow: 0 2px 0 #b30000 !important;
+	box-shadow: 0 2px 0 #b3006b !important;
 }
 
 .miners {
 	width: 400px;
-	float:left;
+	float: left;
 	background: #435970;
 	outline: 1px dashed #8fa6bc;
 }
@@ -149,7 +191,7 @@ body {
 	height: 90px;
 	margin: 20px 20px 0 20px;
 	background: -webkit-linear-gradient(#3396ff 0%, #007bff 30%, #007bff 70%, #3396ff 100%);
-	        background: linear-gradient(#3396ff 0%, #007bff 30%, #007bff 70%, #3396ff 100%);
+	background: linear-gradient(#3396ff 0%, #007bff 30%, #007bff 70%, #3396ff 100%);
 	box-shadow: 0 4px 0 #0056b3;
 	outline: 1px solid #0056b3;
 	outline-offset: -5px;
@@ -197,4 +239,31 @@ body {
 	bottom: 20px;
 	left: 90px;
 	width: 180px;
+}
+
+.footer {
+	width: 100%;
+	height: 30px !important;
+	float: left;
+	background: #705943;
+	outline: 1px dashed #bca58f;
+	font-size: 13px;
+	line-height: 30px;
+}
+
+a {
+	text-decoration: none;
+}
+
+a:link,
+a:visited {
+	color: #ffad33;
+}
+
+a:hover {
+	color: #ff9900;
+}
+
+a:active - a {
+	color: #b36b00;
 }
