--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 body {
-	width: 100vw;
-	min-width: 770px;
+	width: 100%;
 	height: 100vh;
-	min-height: 710px;
+	min-height: 340px;
 	margin: 0;
-	padding: 0;
-	background: #646464;
 	text-align: center;
 	color: #242424;
 	font-family: "Ubuntu", arial, sans-serif;
 	-webkit-user-select: none;
-	   -moz-user-select: none;
-	    -ms-user-select: none;
-	        user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.hidden {
+	display: none !important;
 }
 
 .container {
@@ -21,20 +22,24 @@ body {
 }
 
 .container > div {
-	height: calc(100% - 30px);
+	width: 100vw;
+	min-width: 600px;
 	float: left;
 	outline-offset: -5px;
 }
 
+/********** overview **********/
+
 .overview {
-	width: 200px;
+	height: 100px;
 	background: #597043;
 	outline: 1px dashed #a6bc8f;
 }
 
 .money {
-	width: 160px;
-	margin: 20px;
+	width: 100px;
+	float: left;
+	margin: 22px 0px 18px 20px !important;
 	outline: 1px solid #239023;
 	outline-offset: -5px;
 	background: -webkit-linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
@@ -43,7 +48,7 @@ body {
 }
 
 .money > div {
-	width: 160px;
+	width: 100px;
 	line-height: 30px;
 }
 
@@ -56,15 +61,15 @@ body {
 }
 
 .collect {
-	width: 160px;
-	height: 50px;
-	margin: 0 20px;
+	width: 60px;
+	float: left;
+	margin: 20px;
 	background: -webkit-linear-gradient(#ffad33 0%, #ff9900 30%, #ff9900 70%, #ffad33 100%);
 	background: linear-gradient(#ffad33 0%, #ff9900 30%, #ff9900 70%, #ffad33 100%);
 	box-shadow: 0 4px 0 #b36b00;
 	outline: 1px solid #b36b00;
 	outline-offset: -5px;
-	line-height: 50px;
+	line-height: 60px;
 	cursor: pointer;
 	cursor: hand;
 }
@@ -76,9 +81,9 @@ body {
 }
 
 .options {
-	width: 160px;
-	height: 40px;
-	margin: 20px;
+	width: 100px;
+	margin: 20px 20px 0 0;
+	float: right;
 	background: -webkit-linear-gradient(#64d22d 0%, #83db57 30%, #83db57 70%, #64d22d 100%);
 	background: linear-gradient(#64d22d 0%, #83db57 30%, #83db57 70%, #64d22d 100%);
 	box-shadow: 0 4px 0 #46931f;
@@ -89,15 +94,10 @@ body {
 	cursor: hand;
 }
 
-.optionspanel {
-	width: 160px;
-	margin: 0 20px;
-}
-
 .optionspanel > div {
-	width: 70px;
-	height: 40px;
-	float: left;
+	width: 55px;
+	margin: 20px 5px 0 0;
+	float: right;
 	background: -webkit-linear-gradient(#64d22d 0%, #83db57 30%, #83db57 70%, #64d22d 100%);
 	background: linear-gradient(#64d22d 0%, #83db57 30%, #83db57 70%, #64d22d 100%);
 	box-shadow: 0 4px 0 #46931f;
@@ -111,88 +111,16 @@ body {
 .options:active,
 .optionspanel > div:active {
 	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
 	box-shadow: 0 2px 0 #46931f;
-}
-
-.save {
-	margin: 0 20px 0 0;
-}
-
-.reset {
-	width: 160px !important;
-	margin: 20px 0;
-}
-
-.upgrade {
-	width: calc(100% - 600px);
-	min-width: 170px;
-	max-height: calc(100% - 350px) !important;
-	background: #594370;
-	outline: 1px dashed #a58fbc;
-}
-
-.upgrades,
-.up {
-	width: 130px;
-	display: table;
-	min-height: 40px;
-	margin: 20px;
-	background: -webkit-linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
-	background: linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
-	box-shadow: 0 4px 0 #6b00b3;
-	outline: 1px solid #6b00b3;
-	outline-offset: -5px;
-	line-height: 40px;
-	cursor: pointer;
-	cursor: hand;
-}
-
-.up {
-	width: 55px !important;
-	margin: 0 0 20px 20px;
-	float: left;
-}
-
-.upgrades:active,
-.up:active {
-	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
-	box-shadow: 0 2px 0 #6b00b3;
-}
-
-.upactive {
-	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
-	box-shadow: 0 2px 0 #6b00b3 !important;
-}
-
-.connector {
-	width: calc(100% - 600px);
-	min-width: 170px;
-	height: 320px !important;
-	background: #704359;
-	outline: 1px dashed #bc8fa6;
-}
-
-.adminpanel {
-	width: 150px;
-	margin: 0 20px;
-}
-
-.k,
-.m {
-	width: 75px;
-	float: left;
 }
 
 .admin,
 .buildings,
 .hack {
-	width: 130px;
-	display: table;
-	min-height: 40px;
-	margin: 20px;
+	padding: 0 10px;
+	margin: 20px 5px 0 0;
+	float: right;
 	background: -webkit-linear-gradient(#ff33ad 0%, #ff0099 30%, #ff0099 70%, #ff33ad 100%);
 	background: linear-gradient(#ff33ad 0%, #ff0099 30%, #ff0099 70%, #ff33ad 100%);
 	box-shadow: 0 4px 0 #b3006b;
@@ -203,39 +131,73 @@ body {
 	cursor: hand;
 }
 
-.buildings {
-	margin: 0 0 20px;
-}
-
-.hack {
-	width: 55px !important;
-	margin: 0 0 20px;
-}
-
 .admin:active,
 .hack:active {
 	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
 	box-shadow: 0 2px 0 #b3006b;
 }
 
 .buildingsactive {
 	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
 	box-shadow: 0 2px 0 #b3006b !important;
 }
 
-.miners {
-	width: 400px;
+/********** upgrade **********/
+
+.upgrades {
+	height: 80px;
+	background: #594370;
+	outline: 1px dashed #a58fbc;
+}
+
+.upgrade {
+	width: 60px;
+	margin: 20px 0 20px 20px;
 	float: left;
+	background: -webkit-linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
+	background: linear-gradient(#ad33ff 0%, #9900ff 30%, #9900ff 70%, #ad33ff 100%);
+	box-shadow: 0 4px 0 #6b00b3;
+	outline: 1px solid #6b00b3;
+	outline-offset: -5px;
+	line-height: 40px;
+	cursor: pointer;
+	cursor: hand;
+}
+
+.upgrade:active {
+	-webkit-transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
+	box-shadow: 0 2px 0 #6b00b3;
+}
+
+.upactive {
+	-webkit-transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
+	box-shadow: 0 2px 0 #6b00b3 !important;
+}
+
+/********** mienrs **********/
+
+.miners {
+	width: 100%;
+	height: calc(100% - 210px);
+	min-height: 130px;
 	background: #435970;
 	outline: 1px dashed #8fa6bc;
+}
+
+.hidemine {
+	height: calc(100% - 40px);
+	margin: 20px;
+	overflow-y: scroll;
 }
 
 .miner {
 	width: 360px;
 	height: 90px;
-	margin: 20px 20px 0 20px;
+	margin: 0 0 20px 0;
 	background: -webkit-linear-gradient(#3396ff 0%, #007bff 30%, #007bff 70%, #3396ff 100%);
 	background: linear-gradient(#3396ff 0%, #007bff 30%, #007bff 70%, #3396ff 100%);
 	box-shadow: 0 4px 0 #0056b3;
@@ -245,9 +207,13 @@ body {
 	cursor: hand;
 }
 
-.miners > div:active {
+.miner:nth-last-child(1) {
+	margin: 0 0 2px 0 !important;
+}
+
+.hidemine > div:active {
 	-webkit-transform: translate(0px, 2px);
-	        transform: translate(0px, 2px);
+	transform: translate(0px, 2px);
 	box-shadow: 0 2px 0 #0056b3;
 }
 
@@ -287,6 +253,8 @@ body {
 	width: 180px;
 }
 
+/********** footer **********/
+
 .footer {
 	width: 100%;
 	height: 30px !important;
@@ -297,19 +265,19 @@ body {
 	line-height: 30px;
 }
 
-a {
+.footer a {
 	text-decoration: none;
 }
 
-a:link,
-a:visited {
+.footer a:link,
+.footer a:visited {
 	color: #ffad33;
 }
 
-a:hover {
+.footer a:hover {
 	color: #ff9900;
 }
 
-a:active - a {
+.footer a:active - a {
 	color: #b36b00;
 }
