--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 .money {
 	width: 100px;
 	float: left;
-	margin: 22px 0px 18px 20px !important;
+	margin: 22px 0px 18px 20px;
 	outline: 1px solid #239023;
 	outline-offset: -5px;
 	background: -webkit-linear-gradient(#5bd75b 0%, #32cd32 30%, #32cd32 70%, #5bd75b 100%);
@@ -186,7 +186,6 @@ body {
 /********** mienrs **********/
 
 .miners {
-	width: 100%;
 	height: calc(100% - 210px);
 	min-height: 130px;
 	background: #435970;
@@ -269,9 +268,7 @@ body {
 /********** footer **********/
 
 .footer {
-	width: 100%;
-	height: 30px !important;
-	float: left;
+	height: 30px;
 	background: #705943;
 	outline: 1px dashed #bca58f;
 	font-size: 13px;
